# binance-data-downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/binance_downloader/: __init__.py  core.py  downloader.py  main.py  symbol_fetcher.py  url_builder.py  utils.py
tests/: test_core.py  test_downloader.py  test_main.py  test_symbol_fetcher.py  test_url_builder.py  test_utils.py  tests.py
